# CayumanDjango

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  conftest.py  docker-compose.yml  fabfile.py  manage.py  pyproject.toml
cayuman/: admin.py  asgi.py  backends.py  decorators.py  forms.py  jinja2.py  middleware.py  models.py  permissions.py  settings.py  urls.py  utils.py  views.py  wsgi.py
cayuman/admin_templates/: workshop_period_students.html
cayuman/management/commands/: add_from_ods.py  add_student_from_csv.py  add_student_from_ods.py  add_teacher_from_csv.py  add_teacher_from_ods.py  add_workshop_from_csv.py  add_workshop_from_ods.py
cayuman/migrations/: 0001_initial.py  0002_alter_cycle_options_alter_member_options_and_more.py  0003_alter_cycle_options_alter_member_options_and_more.py  0003_workshop_full_name_alter_cycle_description_and_more.py  0004_period_enrollment_end.py  0005_period_preview_date.py  0006_alter_period_enrollment_start.py  0007_alter_period_enrollment_end.py
cayuman/templates/: 404.html  500.html  503.html  base.html  base_internal.html  enrollment.html  home.html  home.html.bak  no-period.html  timetable_template.html  weekly_schedule.html  workshop_period.html  workshop_periods.html
cayuman/templates/admin/: cycle_timetable_by_period.html  periods_dropdown.html  student_cycle_periods_list.html  (+2 more)
cayuman/templatetags/: cayuman.py
tests/: README.md  conftest.py  test_cache_clearing.py  test_impersonation.py  test_members.py  test_middleware.py  test_periods.py  test_schedules.py  test_student_cycles.py  test_views.py  test_workshop_periods.py
(+4 files in other folders)
