[tool.poetry]
name = "cayuman"
version = "0.1.0"
description = "School workshops inscription web form for students enrollment."
authors = ["Salvador Carvajal <scarvajal@comunidadeducativacayuman.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.6.1"
pytest-django = "^4.8.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cayuman.settings"
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
