[tool.poetry]
name = "cayuman"
version = "0.2.0"
description = "School workshops inscription web form for students enrollment."
authors = ["Salvador Carvajal <scarvajal@comunidadeducativacayuman.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.4"
jinja2 = "^3.1.3"
django-jinja = "^2.11.0"
django-maintenance-mode = "^0.21.1"
mysql-to-sqlite3 = "^2.1.11"
django-impersonate = "^1.9.4"
django-anymail = {extras = ["mailgun"], version = "^11.0.1"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.6.1"
pytest-django = "^4.8.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cayuman.settings"
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
